<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <ImageView
        android:id="@+id/homeFragmentNumberIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_undraw_positive_attitude_xaae"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/select_text"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeFragmentTitleWelcome" />


    <TextView
        android:id="@+id/homeFragmentTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_text_home_fragment"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeFragmentNumberIcon" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contry_tagline"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeFragmentTitleWelcome" />

    <TextView
        android:id="@+id/quickSettleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Quick Settle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailSettleText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detailSettleText"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Detail Settle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quickSettleText" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/quickSettleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_fast_forward_24"
        app:fabCustomSize="70dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/quickSettleText"
        app:layout_constraintEnd_toEndOf="@id/quickSettleText"
        app:layout_constraintStart_toStartOf="@id/quickSettleText"
        app:maxImageSize="35dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detailSettleButton"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_content_paste_go_24"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toTopOf="@id/detailSettleText"
        app:layout_constraintStart_toStartOf="@id/detailSettleText"
        app:layout_constraintEnd_toEndOf="@id/detailSettleText"
        app:maxImageSize="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>